# customer360-risk

./: .env  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.local.yml  docker-compose.yml  pyproject.toml  requirements.txt
dags/: customer360_pipeline.py
scripts/: generate_data.py
seatunnel/: credit_scores_ingestion.conf  customers_ingestion.conf  transactions_ingestion.conf
spark_jobs/: ingestion_etl.py  risk_scoring_etl.py  warehouse_etl.py
sql/: 01_init_schema.sql  02_analytics_views.sql
